--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "4": "^0.0.0",
     "browser-sync": "^2.27.10",
     "browser-sync-client": "^2.27.10",
+    "browser-sync-ui": "^2.27.10",
     "bufferutil": "^4.0.6",
     "build": "^0.1.4",
     "encoding": "^0.1.13",
@@ -29,6 +30,7 @@
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "npm": "^8.12.1",
+    "orchestrator": "^0.3.8",
     "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1",
     "sass": "^1.52.1",
